# pyregion

./: CHANGES.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
pyregion/: c_numpy.pxd  setup_package.py
